# motostat-to-spritmonitor

./: README.md  pyproject.toml  requirements.txt  start.py
libs/: base.py  logs.py  main.py  model.py  processor.py
